--- a/style.css
+++ b/style.css
@@ -15,3 +15,82 @@ body {
   font-family: "Roboto", sans-serif;
   background: #fff;
 }
+
+/*Global*/
+
+img {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: #000;
+}
+hr {
+  width: 95vw;
+  margin: 0 auto;
+}
+
+/*header*/
+
+.top-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  background: #252525;
+  color: #fff;
+  padding: 20px 30px;
+}
+
+.top-head .fas {
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+/******* JS STYLES ********/
+
+.times-btn {
+  display: none;
+}
+
+.nav-bar {
+  background: #333;
+  height: 0;
+  overflow: hidden;
+}
+
+.show-nav {
+  height: auto;
+}
+
+/***************************************************************************/
+
+.nav-bar ul li {
+  text-align: center;
+  display: block;
+  padding: 15px 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.nav-bar ul li:hover {
+  background: #0e0e0e;
+}
+
+.nav-bar ul li a {
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.nav-bar ul li a:hover {
+  font-size: 18px;
+}
+
+/*SOCIAL*/
+
+.social-icons {
+  display: none;
+}
