banner section added

--- a/style.css
+++ b/style.css
@@ -95,6 +95,152 @@ hr {
   display: none;
 }
 
+/*banner*/
+
+.banner {
+  min-height: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 30px 0;
+  margin-top: 8px;
+}
+
+.banner-main-content {
+  padding: 0 2rem;
+  line-height: 1.7;
+}
+
+.banner-main-content h2 {
+  font-size: 2rem;
+  font-family: var(--heading);
+}
+
+.banner-main-content h3 {
+  padding: 1rem 0;
+}
+
+.banner-main-content button {
+  border: none;
+  background: #252525;
+  padding: 14px 18px;
+  font-size: 1.2rem;
+  font-family: "Montserrat", sans-serif;
+  transition: background 0.5s ease;
+}
+
+.banner-main-content button a {
+  color: #fff;
+  transition: color 0.5s ease;
+}
+
+.banner-main-content button:hover {
+  background: #fff;
+}
+
+.banner-main-content button:hover a {
+  color: #252525;
+}
+
+.current-news-head {
+  background: #fff;
+  padding: 20px;
+  font-size: 12px;
+  margin: 20px 0;
+}
+
+.current-news-head h3 {
+  padding: 6px;
+  cursor: pointer;
+  position: relative;
+}
+
+.current-news-head h3:hover::before {
+  content: ">> ";
+  position: absolute;
+  left: -13px;
+}
+
+.current-news-head span {
+  display: block;
+  font-family: var(--heading);
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.hot-topic {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  padding: 10px;
+  height: 300px;
+  /* background: black;*/
+}
+
+.hot-topic img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  filter: brightness(0.6);
+  object-fit: cover;
+}
+
+.hot-topic-content {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  line-height: 1.3;
+  color: #f3f3f3;
+}
+
+.hot-topic-content h2 {
+  padding: 10px 0;
+  font-size: 18px;
+  text-shadow: 0 0 2px #000;
+}
+
+.hot-topic-content h3 {
+  padding: 10px 0;
+  font-size: 16px;
+  text-shadow: 0 0 2px #000;
+}
+
+.hot-topic-content p {
+  padding: 12px 10px;
+  font-size: 15px;
+  text-shadow: 0 0 2px #000;
+}
+
+.hot-topic-content a {
+  display: block;
+  background: #f3f3f3;
+  border: none;
+  width: 95px;
+  border-radius: 2px;
+  text-align: center;
+  padding: 7px 10px;
+  font-size: 14px;
+  margin: 10px 0 10px 10px;
+}
+
+.hot-topic-content a:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 460px) {
+  .hot-topic-content h2 {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 768px) {
+  .banner-sub-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (min-width: 800px) {
   /*nav*/
   .ham-btn,
@@ -155,5 +301,11 @@ hr {
 
   .social-icons ul li {
     padding: 20px;
+  }
+}
+
+@media (min-width: 1080px) {
+  .banner {
+    grid-template-columns: 1fr 2fr;
   }
 }
